--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest-expo": "~53.0.10",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
   "resolutions": {
